<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wrimo Companion</string>
    <string name="configure">Display daily word count left for current user:</string>
    <string name="configure_global">Display word written count for current user</string>
    <string name="add_widget">Add widget</string>
    <string name="default_username">Username</string>
    <string name="default_wordcount" translatable="false">0</string>
    <string name="name_invalid">Wrong login or user not registered yet</string>
    <string name="dialog_add_user_title">Follow user %1$s</string>
    <string name="dialog_update_wordcount">Update your wordcount</string>
    <string name="please_loading">Please wait...</string>
    <string name="unfollow_people">Stop following</string>
    <string name="follow_people">Follow</string>
    <string name="error_network_widget">Error</string>
    <string name="stats_goal">Goal</string>
    <string name="stats_wordcount">Word count</string>
    <string name="stats_wordcount_today">Today\'s Word count</string>
    <string name="stats_daily_target">Today\'s goal</string>
    <string name="stats_daily_target_remaining">Remaining words today</string>
    <string name="stats_nb_day_remaining">Days left</string>
    <string name="stats_empty" translatable="false">...</string>
    <string name="error_network_widget_toast">%1$s had a network error (%2$s)</string>
    <string name="error_network_fragment_bottom">network</string>
    <string name="yes">Yes</string>
    <string name="follow">Follow</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_remove_user_title">Are you sure?</string>
    <string name="dialog_remove_user_message">Do you really want to stop following %1$s\'s work ?</string>
    <string name="title_graph">Statistics</string>
    <string name="stats_marker_view">%1$s words on %2$s\n%3$s words today</string>
    <string name="stats_bar_marker_view">%1$s words on %2$s</string>

    <string name="widget_title_global">Amount of words lefts</string>
    <string name="widget_title">Daily objective</string>
    <string name="show_friends">See your friends</string>
    <string name="title_friends_activity">Friends of %1$s</string>
    <string name="btn_action_remove">Stop following</string>
    <string name="btn_action_add">Follow</string>
    <string name="compare_with">Compare with</string>
    <string name="dialog_picker_default">Choose someone</string>
    <string name="dialog_picker_title">Compare your stats</string>
    <string name="choose_favorite_user">Pick someone from your followed people</string>
    <string name="btn_valid_compare_with">Begin comparison</string>
    <string name="title_compare_activity">%1$s vs %2$s</string>
    <string name="linear_progress_label">Theorical progress</string>

    <string name="bad_request">Network error or invalid login</string>
    <string name="menu_playstore">Vote for your companion</string>

    <string name="welcome_title">I am Wrimo Companion,\nyour writing parter.</string>
    <string name="welcome_question">What do you wish to do ?</string>
    <string name="welcome_choice_camp">I wish to take part of Camp Nanowrimo</string>
    <string name="welcome_choice_nano">I wish to take part to Nanowrimo</string>
    <string name="welcome_form_title">Please enter your username on this website: %s</string>
    <string name="welcome_start">Begin session</string>
    <string name="welcome_prepare_session">Preparing writing session for %s...</string>

    <string name="camp_session_name">Camp Nanowrimo</string>
    <string name="nano_session_name">Nanowrimo</string>

    <string name="relative_time_days_remaining_to_start">Beginning in %d days</string>
    <string name="relative_time_start_tomorrow">%s begins tommorrow!</string>
    <string name="relative_time_start_today">Let\'s go!</string>
    <string name="relative_time_days_remaining_to_end">Ends in %d days</string>
    <string name="relative_time_end_tomorrow">%s ends tommorrow!</string>
    <string name="relative_time_end_today">Final day!</string>

    <string name="info_session_not_started">%1$s hasn\'t begun yet. Still %2$d days left to wait.\nTake some time to prepare!</string>
    <string name="info_session_not_started_last_day">%1$s begins tomorrow.\nGet ready!</string>
    <string name="info_session_ended">%1$s is now over!</string>

    <string name="dashboard_summary_title">My stats</string>

    <string name="dashboard_my_favories">My favorites</string>
    <string name="dashboard_my_favories_more_one">And %d other</string>
    <string name="dashboard_my_favories_more">And %d others</string>
    <string name="dashboard_my_favories_link">All my favorites</string>
    <string name="dashboard_my_favories_empty">You currently have no one in your favorite list.\nKeep an eye over your friends</string>

    <string name="dialog_add_to_wordcount_title">Add words to my wordcount</string>
    <string name="dialog_add_to_wordcount_hint">Words written today</string>
    <string name="dialog_add_to_wordcount_positive">Add</string>
    <string name="dashboard_hotstuff_update_wordcount_success">Word count updated. This may take a few moments.</string>
    <string name="dashboard_hotstuff_update_wordcount_error">Unable to update your word count</string>

    <string name="dashboard_hotstuff_missing_secretkey_title">Secret key</string>
    <string name="dashboard_hotstuff_missing_secretkey_message">You should fill in a secret key to update your word count. More about this in the settings panel.</string>
    <string name="dashboard_hotstuff_missing_secretkey_positive">Settings</string>

    <string name="dashboard_hotstuff_advice_remaining_a_lot">Hang on! %d words to write for today</string>
    <string name="dashboard_hotstuff_advice_remaining">Only %d words left for today</string>
    <string name="dashboard_hotstuff_advice_remaining_one">One final word for today</string>
    <string name="dashboard_hotstuff_advice_exact_wordcount">You\'re exactly on time</string>
    <string name="dashboard_hotstuff_advice_bonus_wordcount">Nice one! %d additional words for today</string>

    <string name="dashboard_hotstuff_ended_win">Congratulations! You won %s\'s challenge</string>
    <string name="dashboard_hotstuff_ended">%s is now over!</string>

    <string name="dashboard_hotstuff_day">Day %d</string>


    <string name="action_params">Settings</string>
    <string name="action_vote">Vote for this app</string>
    <string name="action_about">About</string>

    <string name="ranking_title">All</string>

    <string name="settings_title">Settings</string>
    <string name="secretkey_title">Secret NaNoWriMo Key</string>
    <string name="secretkey_short_description">A personal key provided by the official website nanowrimo.org</string>
    <string name="secretkey_long_description">This key can be found on the official website and allows you to submit your word count from Wrimo Companion. Don\'t worry, this key stay in your phone\'s storage and we don\'t share it.</string>
    <string name="secretkey_hint">Your secret key</string>
    <string name="secretkey_link">Open the official website to get your key</string>

    <string name="setting_account_title">My Wrimo Companion account</string>
    <string name="setting_account_shortdescription">%1$s taking part in %2$s</string>
    <string name="setting_account_cleardata">Erase data on Wrimo Companion</string>
    <string name="setting_account_cleardata_popup_title">Erase my data</string>
    <string name="setting_account_cleardata_popup_message">You\'re about to loose all data on the app including your secret key and your favorite list. Are you sure?</string>

    <string name="about_us_message">Wish to know more about Wrimo Companion and its makers?\nFirst and foremost,  thank you for downloading our app! We hope it is to your taste. We\'re Amandine and Guillaume. The first writes often while the second reads a lot, but we\'re both mobile programming professionals.\n This app was made on our spare time, and we\'re doing our best to make it both pratical and easy to use for every writer wanted to take part in those wonderful challenges that are NaNoWriMo and Camp NaNoWriMo. Should you encouter any issues with the app or just wish to give us feedback or ideas feel free to contact us at the email address bellow.</string>

    <string name="about_us_contact_email" translatable="false">nekotoneko.apps@gmail.com</string>

    <string name="email_chooser">Envoyez l\'email...</string>
    <string name="user_name">Username</string>

    <!-- Errors -->
    <string name="generic_server_error">Our servers have a problem (%d)</string>
    <string name="generic_server_down">Our servers are inaccessible. Try again later.</string>
    <string name="generic_error">An error occurred</string>
    <string name="parsing_failed">Unable to communicate with our servers. Try again later.</string>
    <string name="no_internet">Check your network</string>
    <string name="no_network_connection">@string/no_internet</string>
    <string name="auth_failed">The username is not found</string>
    <string name="generic_server_timeout">Unable to join with our servers. Try again later.</string>
    <string name="no_project_found">No writing project found. Make sure you create a project on official website.</string>

    <string name="welcome_username_help">My nickname is ok but I can not start my session</string>
    <string name="help_title">FAQ</string>
    <string name="help_username_not_found">\"I\'m sure to enter the correct username but the application still say that it is not correct or does not find the corresponding user\"</string>
    <string name="help_username_not_found_answer">Two cases are possible: your username contains special characters not managed by the application or when your username is similar to that of another user once convert for the official website.</string>
    <string name="help_username_not_found_support">You also have two solutions available. You can first contact support to inform him that your username is not recognized, it will be possible to send you back the username to enter in the application to start your Wrimo Companion session. This will also improve the application for future users.</string>
    <string name="help_username_not_found_authorinfo">You can then go get yourself transformed the pseudonym to be sent to the official website. For example, the nanowrimo.org site, open the \"Author Info\" located in the \"My NaNoWriMo\" menu.</string>
    <string name="help_username_not_found_addressbar">In your browser\'s address bar, copy the text after the last \"/\" using your phone or on a paper and then enter the text as your username in Wrimo Companion (case does not important).</string>
    <string name="help_connection_failure">\"I check my internet connection but the application can not start my session.\"</string>
    <string name="help_connection_failure_answer">Try again a few moments later. If the problem persists, send the exact content of the displayed error and explain that you wanted to do.</string>
    <string name="help_support">Contact Support</string>

    <!-- Next event -->
    <string name="welcome_choice_next_event">I wish to know the next events</string>
    <string name="nextevent_nanowrimo_ongoing">NaNoWriMo is on going this month</string>
    <string name="nextevent_nanowrimo_next">NaNoWriMo takes place from the 1st to 30th november %d</string>
    <string name="nextevent_camp_ongoing">Camp NaNoWriMo is on going this month</string>
    <string name="nextevent_camp_next">Camp NaNoWriMo takes place from 1st to %1$dth %2$s %3$d</string>

</resources>
